--- a/MachineTest/MachineTest.csproj
+++ b/MachineTest/MachineTest.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cars\Car.cs" />
+    <Compile Include="Cars\PassengerCar.cs" />
+    <Compile Include="Cars\SportCar.cs" />
+    <Compile Include="Cars\TruckCar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
